# bracket-tools

./: .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md
.claude/rules/: codebase_map.md
crates/bracket-tools-cache/: Cargo.toml
crates/bracket-tools-cache/src/: cached_provider.rs  graphql_provider.rs  lib.rs  memory_storage.rs  null_storage.rs  provider.rs  provider_monitor.rs  query_cache.rs  sled_storage.rs  storage.rs
crates/bracket-tools-cache/tests/: storage_tests.rs
crates/bracket-tools-core/: Cargo.toml
crates/bracket-tools-core/src/: data_types.rs  lib.rs  types.rs
crates/bracket-tools-query/: Cargo.toml
crates/bracket-tools-query/src/: service_reg.rs
crates/bracket-tools-startgg/: Cargo.toml
crates/bracket-tools-startgg-schema/: Cargo.toml  build.rs
crates/bracket-tools-startgg-schema/src/: admin_probe.rs  enums.rs  generate_registration_token.rs  get_event_characters.rs  get_event_structure.rs  get_events_for_tournament.rs  get_games_for_set.rs  get_number_of_player_sets_after_datetime.rs  get_participants_for_tournament.rs  get_sets_for_event.rs  get_sets_of_player_after_datetime.rs  get_tournament_for_id.rs  get_tournament_header.rs  get_tournaments_for_owner.rs  get_tourney_id.rs  lib.rs  mark_set_called.rs  mark_set_in_progress.rs  register_for_tournament.rs  report_bracket_set.rs  scalars.rs  schema.rs
crates/bracket-tools-startgg/src/: conversions.rs  gg_data_types.rs  lazy.rs  lib.rs  limit_journal.rs  normalize.rs  provider.rs  session.rs  types.rs
crates/bracket-tools-startgg/tests/: fixture_tests.rs
crates/bracket-tools-startgg/tests/fixtures/: player_3551055_craiglerock.json  player_4665060_cronos.json  set_100308057_cronos_v_utugboat.json  set_89833279_rustman_v_dabeef.json  set_89833281_yaboichips_v_feiffer.json  set_89833288_aceeagle_v_dog.json  set_89833550_bandage_v_nick.json  set_89840397_spitfire_v_dest.json  set_89845364_devintheguy_v_sancocho.json  set_95304560_craiglerock_v_eternity.json  set_95304563_soulbadguy_v_souffle.json  set_98613766_perendeshe_spectra_gf.json  tournament_733586_bread_basket_2025.json
docs/: architecture.md  scheduler-ops.md
docs/decisions/: 001-mono-repo-structure.md  002-sled-for-caching.md  003-lazy-hydration-at-sdk-layer.md  004-reqwest-over-surf.md  005-query-interface-abstraction.md  006-unified-scheduler-tool.md  007-scheduler-polling-cache-strategy.md
docs/queries/: get_event_structure.graphql  get_games_for_set.graphql  get_num_players_in_tournament.graphql  get_number_of_player_sets_after_datetime.graphql  get_player_for_player_id.graphql  get_sets_for_event.graphql  get_sets_of_player_after_datetime.graphql  get_tournament_for_id.graphql  get_tourney_id.graphql  get_user_for_user_slug.graphql  mark_set_called.graphql  mark_set_in_progress.graphql
gg_query/: Cargo.toml
gg_query/gg_generated_types/: Cargo.toml
gg_query/gg_generated_types/gg_info/: schema.graphql
gg_query/gg_generated_types/src/: get_num_players_in_tournament.rs  get_player_for_player_id.rs  get_user_for_user_slug.rs
gg_query/gg_query_core/: Cargo.toml
gg_query/gg_query_core/src/: gg_data_types.rs
gg_query/src/: gg_data_types.rs  provider.rs
normalized_data/src/: data_types.rs  dehydrated_normalized_data.rs  hydrated_normalized_data.rs  lib.rs
provider/: Cargo.toml
provider/src/: cached_provider.rs  graphql_provider.rs  lib.rs  provider.rs  query_cache.rs
query_interface/src/: service_reg.rs
reporting/reporter_cli/: Cargo.toml
reporting/reporter_cli/src/: prog_args.rs
reporting/reporter_state/: Cargo.toml
reporting/reporter_state/src/: rest_provider.rs
tools/admin/: Cargo.toml  README.md
tools/admin/src/: fuzzy.rs  main.rs  store.rs
tools/daemon/: Cargo.toml
tools/reporter/reporter-cli/: Cargo.toml
tools/reporter/reporter-cli/src/: prog_args.rs
tools/reporter/reporter-state/: Cargo.toml
tools/reporter/reporter-state/src/: rest_provider.rs
tools/reporter/reporter-state/src/stores/: tourney.rs
tools/scheduler/: Cargo.toml
tools/scheduler/examples/: fbr-100.toml  game-setups.toml  mutation_probe.rs
tools/scheduler/src/: app.rs  cli.rs  config.rs  conflict.rs  duration.rs  fixture_source.rs  graph.rs  init.rs  lib.rs  main.rs  model.rs  persist.rs  poller.rs  preflight.rs  ranker.rs  rehearsal.rs  replay.rs  rollout.rs  roster_cache.rs  set_source.rs  simulator.rs  synth.rs  terminal.rs  ui.rs  world.rs  writer.rs
tools/scheduler/tests/: fixture_replay.rs  garbage.rs  headless_e2e.rs  paced_rehearsal.rs
