[workspace]
members = [
    "crates/bracket-tools-core",
    "crates/bracket-tools-cache",
    "crates/bracket-tools-query",
    "crates/bracket-tools-startgg-schema",
    "crates/bracket-tools-startgg",
    "tools/reporter/reporter-cli",
    "tools/reporter/reporter-state",
    "tools/daemon",
    "tools/scheduler",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sled = "=1.0.0-alpha.121"
cynic = "3.8"
governor = "0.6"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
parking_lot = "0.12"
paste = "1"
bincode = "1"
bytesize = "1.3"
anyhow = "1"
# TUI stack for the scheduler tool (current stable). reporter-cli keeps its own
# stale ratatui 0.26 / crossterm 0.27 pins (declared directly, not here) — it's a
# future absorb-candidate, so the two coexist rather than forcing a lockstep bump.
ratatui = { version = "0.30", features = ["unstable-widget-ref"] }
crossterm = "0.29"
toml = "1"
# Advisory flock for the scheduler's single-instance lockfile.
fs2 = "0.4"

[profile.release]
opt-level = 3
incremental = true
lto = "fat"
codegen-units = 1
