[package]
name = "bracket-tools-cache"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bytesize = { workspace = true }
cynic = { version = "3.8", features = ["http-surf", "surf"] }
governor = { workspace = true }
serde = { workspace = true }
sled = { workspace = true }
surf = "2.3.2"
thiserror = { workspace = true }
