[package]
name = "bracket-tools-startgg"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bracket-tools-core = { path = "../bracket-tools-core" }
bracket-tools-cache = { path = "../bracket-tools-cache" }
cynic = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
