[package]
name = "bracket-tools-startgg"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bracket-tools-core = { path = "../bracket-tools-core" }
bracket-tools-cache = { path = "../bracket-tools-cache" }
bracket-tools-startgg-schema = { path = "../bracket-tools-startgg-schema" }
cynic = { workspace = true, features = ["http-reqwest"] }
governor = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
parking_lot = { workspace = true }
