[package]
name = "bracket-tools-admin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "gg-admin"
path = "src/main.rs"

[dependencies]
bracket-tools-cache = { path = "../../crates/bracket-tools-cache" }
bracket-tools-startgg = { path = "../../crates/bracket-tools-startgg" }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
