[package]
name = "bracket-tools-scheduler"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "scheduler"
path = "src/main.rs"

[dependencies]
bracket-tools-cache = { path = "../../crates/bracket-tools-cache" }
bracket-tools-startgg = { path = "../../crates/bracket-tools-startgg" }
bracket-tools-startgg-schema = { path = "../../crates/bracket-tools-startgg-schema" }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cynic = { workspace = true }
fs2 = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# TUI stack (current stable, from workspace deps). Async terminal input is handled
# by a dedicated blocking thread that forwards to the Elm-loop channel, so
# crossterm's `event-stream` feature is intentionally not needed.
crossterm = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
# Virtual-time tests (start_paused) for the poller loop.
tokio = { workspace = true, features = ["test-util"] }
