[package]
name = "reporter-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bracket-tools-core = { path = "../../../crates/bracket-tools-core" }
bracket-tools-startgg = { path = "../../../crates/bracket-tools-startgg" }
chrono = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
